HUB-5670 Default searches to Kaminari's page size
