# app/controllers/external_api/concerns/search/permit_projects.rb
@@ -18,18 +18,10 @@ module ExternalApi::Concerns::Search::PermitProjects
       },
       match: :word_middle,
       where: permit_project_where_clause,
-      page: permit_project_search_params[:page],
+      page: permit_project_search_params[:page].presence || 1,
       per_page:
-        (
-          if permit_project_search_params[:page]
-            (
-              permit_project_search_params[:per_page] ||
-                Kaminari.config.default_per_page
-            )
-          else
-            nil
-          end
-        ),
+        permit_project_search_params[:per_page].presence ||
+          Kaminari.config.default_per_page,
       scope_results: ->(relation) { policy_scope([:external_api, relation]) }
     }
 
